# ocrd_wrap

./: .gitignore  .pylintrc  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  ocrd-tool.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  docker-image.yml  pypi.yml
ocrd_wrap/: __init__.py  cli.py  ocrd-tool.json  param_im6convert-denoise-raw.json  param_scribo-cli-binarize-sauvola-ms-split.json  shell.py  skimage_binarize.py  skimage_denoise.py  skimage_denoise_raw.py  skimage_normalize.py
tests/: test_binarize.py  test_denoise.py  test_denoise_raw.py  test_normalize.py  test_shell.py
